# navigator-db-client

./: .coveragerc  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: auto-tagging-failsafe.yml  ci-cd.yml  ci.yml  merge_to_main.yml  pull_request.yml  tag.yml  update-dependencies.yml
.trunk/: configure-pyright-with-pyenv.sh  trunk.yaml
.trunk/configs/: .markdownlint.yaml
db_client/: __init__.py  initial_data.py  run_migrations.py  session.py  utils.py
db_client/.github/workflows/: tag.yml
db_client/alembic/: env.py
db_client/alembic/versions/: 0001_flattened.py  0001_squashed.py  0002_add_geo_statistics.py  0002_populate_initial_data.py  0003_added_document_relationships.py  0004_add_doc_slug_and_unique_id.py  0005_allow_document_md5sum_nullable.py  0006_add_cdn_object_to_document_table.py  0007_add_content_type.py  0008_import_id_and_slug_unique_and_not_null.py  0009_add_title_postfix.py  0010_add_geography_slugs.py  0011_new_document_schema.py  0012_add_app_schema.py  0013_families_and_collections.py  0014_add_app_user_per_org_authz.py  0015_remove_deprecated_db_models.py  0016_add_unfccc.py  0017_remove_family_status.py  0018_add_more_language_fields.py  0019_add_entity_counters.py  0020_added_created_and_last_modified_columns_.py  0021_updated_document_triggers_and_last_.py  0022_added_audit_trigger_for_events.py  0023_added_audit_trigger_for_family.py  0024_added_audit_trigger_for_collections.py  0025_fixed_event_trigger_that_was_preventing_.py  0026_updated_family_doc_primary_key_.py  0027_added_created_column_for_slug_table.py  0028_add_more_keywords.py  0028_test.py  0029_geo_stats.csv  0029_update_geo_statistics.py  0031_cclw_corpus.py  (+49 more)
db_client/data_migrations/: DONT_EDIT_THESE_FILES.md  README.md  __init__.py  populate_counters.py  populate_document_role.py  populate_document_type.py  populate_document_variant.py  populate_event_type.py  populate_geo_statistics.py  populate_geography.py  populate_language.py  populate_taxonomy.py  taxonomy_cclw.py  taxonomy_unf3c.py  taxonomy_utils.py  utils.py
db_client/functions/: __init__.py  corpus_helpers.py  dfce_helpers.py  metadata.py
db_client/models/: __init__.py
db_client/tests/: conftest.py
navigator_db_client/: config.py  errors.py  session.py
navigator_db_client/models/: __init__.py
tests/: conftest.py  test_0061_add_ISO-3166-2_country_subdivisions_to_geography_table.py  test_0064_update_ISO-3166-1_countries_in_geography_table.py  test_0068_remove_duplicate_event_type_subtaxonomy.py  test_alembic.py  test_run_migrations.py
tests/functions/: helpers.py  test_get_entity_specific_taxonomy.py  test_get_taxonomy_by_corpus_type_name.py  test_metadata.py  test_retrieve_family_last_updated_date.py
tests/schema/: test_counters.py  test_geography.py  test_inital_data.py
tests/test-deps-update/: push-tag.json  release-published.json  test-workflow.sh  test_update_workflow.sh
tests/test_schema/: conftest.py  test_inital_data.py
(+57 files in other folders)
