[tool.poetry]
name = "db-client"
version = "3.8.25"
description = "All things to do with the datamodel and its storage. Including alembic migrations and datamodel code."
authors = ["CPR-dev-team <tech@climatepolicyradar.org>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{ include = "db_client" }]

[tool.poetry.dependencies]
python = "^3.9"
sqlalchemy = "^1.4.31,<2.0"
alembic = "^1.7.6"
alembic-utils = "^0.8.2"
psycopg2-binary = "^2.9.3"
SQLAlchemy-Utils = "^0.38.2"
requests = "^2.28"
python-slugify = "^6.1.2"
pydantic = "^2.4.0"

[tool.poetry.dev-dependencies]
pytest-alembic = "^0.10.5"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
pytest-mock-resources = "^2.10.1"
python-on-whales = "^0.70.0"
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
include = ["db_client", "tests"]
exclude = ["**/__pycache__"]
executionEnvironments = [{ "root" = "db_client" }]
venv = "dbclient"
