[project]
name = "db-client"
version = "4.0.0"
description = "All things to do with the data model and its storage. Including alembic migrations and data model code."
authors = [{ name = "CPR-dev-team", email = "tech@climatepolicyradar.org" }]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
  "sqlalchemy>=2.0.0",
  "alembic>=1.13.2",
  "alembic-utils>=0.8.2",
  "psycopg2-binary>=2.9.3",
  "SQLAlchemy-Utils>=0.41.2",
  "requests>=2.28",
  "python-slugify>=6.1.2",
  "pydantic>=2.4.0",
  "pycountry>=24.6.1",
]

[dependency-groups]
dev = [
  "pytest-alembic>=0.12.0",
  "pytest-cov>=4.1.0",
  "pytest-mock>=3.12.0",
  "pytest-mock-resources>=2.10.1",
  "python-on-whales>=0.70.0",
  "pytest>=8.1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["db_client"]

[tool.pyright]
include = ["db_client", "tests"]
exclude = ["**/__pycache__"]
venv = "dbclient"
